# instant-meshes

./: .gitignore  .gitmodules  CMakeLists.txt
exe/: CMakeLists.txt
exe/src/: batch.h  gui_serializer.h  main.cpp  ply_serializer.cpp  ply_serializer.h  viewer.h
lib/: CMakeLists.txt
lib/src/: common.h  common_internal.h  field.cpp  normal.cpp  serializer.cpp  serializer.h  subdivide.cpp  types.h
